<resources>
    <string name="app_name">Adil</string>
    <string name="beranda">Beranda</string>
    <string name="kategori">Kategori</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_button">menu button</string>
    <string name="temp_selected_category"><![CDATA[Energi & Sumber Daya Mineral]]></string>
    <string name="temp_uu_name">Rancangan Peraturan Pemerintah 2020</string>
    <string name="temp_year">2021</string>
    <string name="drawer_menu_01">Tentang Adil Open Law</string>
    <string name="detailTab01">Informasi</string>
    <string name="detailTab02">Timeline</string>
    <string name="temp_total_category_results">21 jumlah peraturan</string>
    <string name="temp_banner_title">Banner Title here...</string>
    <string name="temp_banner_detail">This is the detail of banner</string>
    <string name="kategori_terpopuler">Kategori Terpopuler</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="temp_announcement_title">PP Tahun 2020 Telah Dicabut</string>
    <string name="temp_announcement_detail">This is the detail of the announcement</string>
    <string name="temp_announcement_status">Dicabut</string>
    <string name="temp_category_name">Kesehatan</string>
    <string name="bookmark_button">bookmark button</string>
    <string name="jenis">Jenis</string>
    <string name="lorem_ipsum">lorem ipsum dolor si amet</string>
    <string name="instansi">Instansi</string>
    <string name="nomor">Nomor</string>
    <string name="tahun">Tahun</string>
    <string name="judul">Judul</string>
    <string name="ditetapkan_tanggal">Ditetapkan Tanggal</string>
    <string name="diundangkan_tanggal">Diundangkan Tanggal</string>
    <string name="daerah_id">Id Daerah</string>
    <string name="see_pdf">See PDF</string>
    <string name="filter_peraturan">Filter Peraturan</string>
    <string name="tahun_peraturan">Tahun Peraturan</string>
    <string name="hierarki_peraturan">Hierarki Peraturan</string>
    <string name="undang_undang">Undang-Undang</string>
    <string name="peraturan_pemerintah">Peraturan Pemerintah</string>
    <string name="peraturan_presiden">Peraturan Presiden</string>
    <string name="keputusan_menteri">Keputusan Menteri</string>
    <string name="peraturan_menteri">Peraturan Menteri</string>
    <string name="status_hukum">Status Hukum</string>
    <string name="belum_dicabut_ubah">Belum Dicabut/Ubah</string>
    <string name="telah_dicabut">Telah Dicabut</string>
    <string name="detail">Details</string>
    <string name="tentang_adil_open_law">TENTANG ADIL OPEN LAW</string>
    <string name="about_pharagraph_01">
        Kami mencoba menyelesaikan masalah hiper-regulasi Indonesia yang menyebabkan ketidakharmonisan,
        inkonsistensi, tumpang tindih, yang mengarah pada interpretasi peraturan yang ambigu dan sulit bagi warga negara untuk
        mengakses regulasi yang paling relevan dengan kebutuhan mereka.
        \n
        \n
        Kami ingin membantu masyarakat Indonesia dalam mengakses informasi hukum untuk menemukan
        jawaban atas pertanyaan hukum terkait melalui platform arsip hukum digital yang komprehensif dan terpusat berbasis
        Android sebagai jembatan antara ahli hukum dan pencari bantuan hukum.
        \n
        \n
        Kami memanfaatkan ML untuk menstandarkan produk hukum berbasis PDF ke format yang
        lebih terbuka (HTML) yang dikombinasikan dengan kemampuan pencarian teks lengkap yang dibangun di cloud untuk
        skalabilitas.
    </string>
    <string name="temp_status">Diubah Oleh</string>
    <string name="not_found">Maaf, peraturan tidak ditemukan</string>
    <string name="bookmark_not_found">Belum ada bookmark yang ditambahkan</string>

    <string name="welcome_to">Welcome to</string>
    <string name="adil">Adil</string>
    <string name="adil_tagline">Your legal aid assistant.</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="others">Others</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="drawer_menu_02">Keluar</string>
    <string name="tekan_kembali">Tekan kembali untuk keluar</string>
    <string name="pembaharuan_terbaru">Pembaharuan Terbaru</string>
    <string name="terakhir_dilihat">Terakhir Dilihat</string>
    <string name="last_seen">last seen</string>
    <string name="mencabut">Mencabut</string>
    <string name="mengubah">Mengubah</string>
    <string name="dicabut">Dicabut</string>
    <string name="diubah">Diubah</string>
    <string name="ditetapkan">Ditetapkan</string>
</resources>