<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_smoke"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_peraturan"
                android:textColor="@color/cerulean"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tahun_peraturan"
            android:textColor="@color/charcoal"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeYearSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:stepSize="1.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:values="@array/initial_slider_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hierarki_peraturan"
            android:textColor="@color/charcoal"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rangeYearSlider" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <CheckBox
                android:id="@+id/hierarki_checkbox_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onHierarkiCheckboxClicked"
                android:text="@string/undang_undang" />

            <CheckBox
                android:id="@+id/hierarki_checkbox_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onHierarkiCheckboxClicked"
                android:text="@string/peraturan_pemerintah" />

            <CheckBox
                android:id="@+id/hierarki_checkbox_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onHierarkiCheckboxClicked"
                android:text="@string/peraturan_presiden" />

            <CheckBox
                android:id="@+id/hierarki_checkbox_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onHierarkiCheckboxClicked"
                android:text="@string/keputusan_menteri" />

            <CheckBox
                android:id="@+id/hierarki_checkbox_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onHierarkiCheckboxClicked"
                android:text="@string/peraturan_menteri" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/status_hukum"
            android:textColor="@color/charcoal"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19">

            <CheckBox
                android:id="@+id/status_hukum_checkbox_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStatusHukumCheckboxClicked"
                android:text="@string/belum_dicabut_ubah" />

            <CheckBox
                android:id="@+id/status_hukum_checkbox_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStatusHukumCheckboxClicked"
                android:text="@string/telah_dicabut" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>