<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailUU.information.InformationFragment">

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/skeletonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                style="@style/DetailSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/white"
                android:text="@string/see_pdf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <ImageButton
                android:id="@+id/bookmark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@null"
                android:contentDescription="@string/bookmark_button"
                android:src="@drawable/ic_bookmark_uncheck"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_title_detail"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/temp_uu_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_smoke">

                    <TextView
                        android:id="@+id/textview_details"
                        style="@style/DetailTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/detail"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />


                    <TextView
                        android:id="@+id/textView8"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/jenis"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_details"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_jenis"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="25dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textview_details"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/instansi"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_jenis"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_instansi"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/info_jenis"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/nomor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_instansi"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_nomor"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/info_instansi"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView11"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/tahun"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_nomor"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_tahun"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/info_nomor"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/judul"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_tahun"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_judul"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView12"
                        app:layout_constraintTop_toBottomOf="@+id/info_tahun"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView13"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/ditetapkan_tanggal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_judul"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_ditetapkan"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView13"
                        app:layout_constraintTop_toBottomOf="@+id/info_judul"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView14"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/diundangkan_tanggal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView13"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_diundangkan"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView14"
                        app:layout_constraintTop_toBottomOf="@+id/textView13"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView15"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/daerah_id"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView14"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/info_daerah"
                        style="@style/DetailInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:lineHeight="15sp"
                        android:text="@string/lorem_ipsum"
                        app:layout_constraintStart_toEndOf="@+id/textView15"
                        app:layout_constraintTop_toBottomOf="@+id/textView14"
                        app:layout_constraintWidth_percent="0.58" />

                    <TextView
                        android:id="@+id/textView16"
                        style="@style/DetailSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/kategori"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView15"
                        app:layout_constraintWidth_percent="0.3" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/info_kategori"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="21dp"
                        app:chipSpacingVertical="-10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView16"
                        app:layout_constraintTop_toBottomOf="@+id/textView15"
                        app:layout_constraintWidth_percent="0.58"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.faltenreich.skeletonlayout.SkeletonLayout>

</ScrollView>