<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_announcement_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/temp_announcement_title"
            android:textColor="@color/charcoal"
            style="@style/HeaderText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65" />

        <TextView
            android:id="@+id/tv_announcement_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/temp_announcement_detail"
            android:textColor="@color/dim_gray"
            style="@style/DescriptionText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_announcement_title"
            app:layout_constraintWidth_percent="0.65" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/category_status_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.27">

            <TextView
                android:id="@+id/tv_announcement_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:gravity="center"
                android:text="@string/temp_announcement_status"
                style="@style/TagsText"
                android:textColor="@color/white" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>